Fix mobile spacing

--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -68,6 +68,10 @@
   justify-content: center;
 }
 
+.articleParent {
+  width: 100%;
+}
+
 .articleWrapper1,
 .articleWrapper2,
 .articleWrapper3,
@@ -233,12 +237,6 @@
   padding-bottom: 5%;
 }
 
-@media (max-width: 1390px) {
-  .aboutMeSection {
-    border-radius: 0px;
-  }
-}
-
 @media (max-width: 1100px) {
   .latestContainer {
     display: grid;
@@ -285,6 +283,7 @@
   .aboutCreated,
   .aboutAws {
     width: 85%;
+    padding: 8% 0%;
   }
 }
 
@@ -331,7 +330,7 @@
 
 @media (max-width: 500px) {
   .latestContainer {
-    padding: 7% 0% 10% 0%;
+    padding: 20% 0%;
   }
 
   .articleWrapper1,
